--- a/.github/workflows/CI\CDpipeline.yml
+++ b/.github/workflows/CI\CDpipeline.yml
@@ -1,1 +1,26 @@
+name: master-branch
 
+on:
+  push:
+    branches: 
+      - master
+
+jobs:
+  Build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout
+        uses: actions/checkout@v2
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: build maven
+        run: mvn -B package --file pom.xml
+
+
+
+
+      - name: tomcat deploy
+        run: curl -v -u admin:admin "dockerfilenaam"
+     
