--- a/.github/workflows/CI\CDpipeline.yml
+++ b/.github/workflows/CI\CDpipeline.yml
@@ -17,6 +17,21 @@ jobs:
           java-version: 1.8
       - name: build maven
         run: mvn -B package --file pom.xml
+  push_to_registry:
+    name: Push Docker image to Docker Hub
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v2
+      - name: build docker image
+        run: docker build ./Dockerfile -t dockerfile
+      - name: Push to Docker Hub
+        uses: docker/build-push-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: mattiaswaem/bs2-labo6
+          tag_with_ref: true
 
 
 
