--- a/.github/workflows/CI\CDpipeline.yml
+++ b/.github/workflows/CI\CDpipeline.yml
@@ -23,14 +23,22 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
+      - name: docker login
+        env: 
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}  
+        run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
       - name: build docker image
         run: docker build ./Dockerfile -t dockerfile
       - name: Push to Docker Hub
+        env: 
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}  
         uses: docker/build-push-action@v1
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: mattiaswaem/bs2-labo6
+          username: $DOCKER_USERNAME
+          password: $DOCKER_PASSWORD
+          repository: mattiaswaem/bs2-labo6:latest
           tag_with_ref: true
 
 
